# geoscience

./: .gitignore  README.md  model_lith.pkl  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
docs/: architecture.md  litho_well.md  ml.md  ml_well.md
geosc/ml/: __init__.py  classification.py  cleaning.py  clustering.py  lithology.py  porepressure.py  regression.py  shmax.py  shmin.py
geosc/plotting/: __init__.py  classification_2d.py
scripts/: gen_architecture.py  plot_clustering_2d.py  plot_coherence_2d.py  plot_coherence_3d.py  plot_map_letak_well.py  plot_naive_bayes_gaussian_contours_2d.py  plot_seismic_clustering_2d.py  plot_seismic_clustering_3d.py  plot_seismic_lithology_2d.py  plot_seismic_lithology_3d.py  plot_seismic_regression_2d.py  seismic_trace_headers.py  test_Seismic_TraceHeaders.py  test_WellLog_SOM.py  test_WellLog_classification.py  test_WellLog_clustering.py  test_WellLog_litho.py  test_WellLog_litho_cli.py  test_WellLog_porepressure.py  test_WellLog_regression.py  test_WellLog_shmax.py  test_WellLog_shmin.py  test_attribute_2d.py  test_attribute_3d.py  test_coherence_2d.py  test_coherence_3d.py  test_gridding_litho.py  test_gridding_value.py  test_seismic_attribute_2d.py  test_seismic_attribute_3d.py  test_seismic_clustering_2d.py  test_seismic_clustering_3d.py  test_seismic_coherence_2d.py  test_seismic_coherence_3d.py  test_seismic_crop_3d.py  test_seismic_hydrostatic.py  test_seismic_lithology_2d.py  test_seismic_lithology_3d.py  test_seismic_lithology_prediction_2d.py  test_seismic_lithology_prediction_3d.py  (+11 more)
(+52 files in other folders)
